src/objects/Financial_Fund__c.object
<CustomObject>
    <description>Relevant information pertaining to the fund awarded to the student ie, AR Code, Federal Fund ID, Fund Source...</description>
    <fields>
        <fullName>ARCode__c</fullName>
        <description>AR Code associated with the specific fund.</description>
        <label>AR Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not the fund is Active</description>
        <inlineHelpText>Whether or not the fund is Active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerCode__c</fullName>
        <description>The code to link to the banner fund</description>
        <externalId>true</externalId>
        <inlineHelpText>The code to link to the banner fund</inlineHelpText>
        <label>Banner Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalFundID__c</fullName>
        <description>Federal Fund ID associated with the specific fund.</description>
        <label>Federal Fund ID</label>
        <picklist>
            <picklistValues>
                <fullName>PELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLUS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FundSource__c</fullName>
        <description>The source of the fund, ie: Internal, External, Federal or State...</description>
        <label>Fund Source</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FundTitle__c</fullName>
        <description>Title of the specific fund.</description>
        <label>Fund Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundType__c</fullName>
        <description>The type of fund that the student is receiving, ie: Scholarship, Loan, Grant...</description>
        <label>Fund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the 3rd Party Contract</description>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Funds</relationshipLabel>
        <relationshipName>Financial_Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Financial Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>ARCode__c</columns>
        <columns>BannerCode__c</columns>
        <columns>FederalFundID__c</columns>
        <columns>FundSource__c</columns>
        <columns>FundTitle__c</columns>
        <columns>FundType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>